--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   page_transition: ^2.0.9
   percent_indicator: ^4.2.3
   animate_do: ^3.0.2
+  oktoast: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
